<resources>
    <string name="app_name">ProjetMemoryJaminonLomege</string>
    <string name="color_memory">Color Memory</string>
    <string name="regles">Regles</string>
    <string name="connexion">Connexion</string>
    <string name="inscription">Inscription</string>
    <string name="profil">Profil</string>
    <string name="score">Score :</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="classement">Classement</string>
    <string name="nouvelle_partie">Nouvelle partie</string>
    <string name="continuer">Continuer</string>
    <string name="choix_du_mode">Choix du mode</string>
    <string name="facile">Facile</string>
    <string name="difficile">Difficile</string>
    <string name="expert">Expert</string>
    <string name="chrono">Chrono</string>
    <string name="retour">Retour</string>
    <string name="regle1">1/ Un ou plusieurs blocs de couleurs sont allumées dans un certain ordre. Le nombre de blocs éclairé augmente au fur et à mesure.</string>
    <string name="regle2">2/ Le joueur doit ensuite appuyer sur les blocs éclairés dans le même ordre pour reproduire la même séquence.</string>
    <string name="regle3">3/ Si le joueur échoue, il perd une vie. S’il lui reste au moins 1 vie, on redémarre au début sinon on passe au suivant. Si le joueur réussit, on redémarre au début mais avec un bloc de couleur en plus choisi de façon aléatoire par le jeu.</string>
    <string name="regle4">4/ La partie se termine en indiquant que le joueur a perdu ou en indiquant son score pour ensuite revenir à l’écran lui proposant de recommencer la partie perdue.</string>
    <string name="homme">Homme</string>
    <string name="femme">Femme</string>
    <string name="niveau_1">Niveau 1</string>
    <string name="niveau_2">Niveau 2</string>
    <string name="niveau_3">Niveau 3</string>
    <string name="niveau_4">Niveau 4</string>
    <string name="niveau_5">Niveau 5</string>
    <string name="niveau_6">Niveau 6</string>
    <string name="niveau_7">Niveau 7</string>
    <string name="start">Start</string>
    <string name="avatar">Avatar</string>
    <string name="email">Email :</string>
    <string name="date_de_naissance">Date de naissance :</string>
    <string name="sexe">Sexe :</string>
    <string name="etape">Etape :</string>
    <string name="vies">Vies :</string>
    <string name="mot_de_passe">Mot de passe :</string>
</resources>